[gd_scene load_steps=4 format=3 uid="uid://ce5k56rlqcob4"]

[ext_resource type="Script" path="res://scripts/ui/settings/input_bindings_panel/input_bindings_panel.gd" id="1_6w3m7"]
[ext_resource type="PackedScene" uid="uid://bniejhi1vxwtl" path="res://scenes/ui/settings/input_bindings_panel/input_rebinder.tscn" id="2_f86ar"]
[ext_resource type="PackedScene" uid="uid://xmhpn38awq6d" path="res://scenes/ui/menu_button.tscn" id="3_vif1n"]

[node name="input_bindings_panel" type="Control"]
editor_description = "Panel for editing key/mouse and controller bindings."
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -242.0
offset_right = 400.0
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6w3m7")
input_rebinder_prefab = ExtResource("2_f86ar")

[node name="panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin_container" type="MarginContainer" parent="panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="rebinders_container" type="VBoxContainer" parent="panel/margin_container"]
editor_description = "Main control node containing rebinding controls."
layout_mode = 2
theme_override_constants/separation = 16

[node name="title" type="Label" parent="panel/margin_container/rebinders_container"]
layout_mode = 2
text = "Rebind inputs"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back_button" parent="panel/margin_container/rebinders_container" instance=ExtResource("3_vif1n")]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="panel/margin_container/rebinders_container/back_button" to="." method="_on_back_button_pressed"]
